@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: heur_undercover.c,v 1.111 2010/11/03 12:23:11 bzfviger Exp $"
+#pragma ident "@(#) $Id: heur_undercover.c,v 1.112 2010/12/16 18:35:46 bzfberth Exp $"
 
 /**@file   heur_undercover.c
  * @ingroup PRIMALHEURISTICS
@@ -1482,9 +1482,8 @@ SCIP_RETCODE roundFixingValue(
 
    /* if integral within feasibility tolerance, only shift to nearest integer */
    if( SCIPisFeasIntegral(scip, x) )
-   {
       x = SCIPfeasFrac(scip, x) < 0.5 ? SCIPfeasFloor(scip, x) : SCIPfeasCeil(scip, x);
-   }
+
    /* round in the direction of least locks with fractionality as tie breaker */
    else if( locksrounding )
    {
